--- a/styles/explore.css
+++ b/styles/explore.css
@@ -1,9 +1,15 @@
-/* styles/explore.css */
-
 body {
-    font-family: Arial, sans-serif;
+    font-family: "Poppins", sans-serif;
+    font-weight: 400;
+    font-style: normal;
     margin: 0;
     padding: 0;
+}
+
+button{
+    font-family: "Poppins", sans-serif;
+    font-weight: 400;
+    font-style: normal;
 }
 
 #breadcrumb {
@@ -21,27 +27,29 @@ body {
     border-radius: 3px;
 }
 
-
 #file-list-container {
-    margin: 10px;
+    margin: 10Px;
 }
 
 #file-list {
     list-style: none; 
     padding: 0;
     border: 1px solid #ccc;
+    overflow: hidden; /* Oculta cualquier contenido desbordante */
 }
 
 #file-list li {
     display: grid;
-    grid-template-columns: 30px 2fr 1fr 1fr;
+    grid-template-columns: 10fr 10fr 4fr 0fr;
     padding: 8px;
     border-bottom: 1px solid #eee;
     align-items: center;
+    overflow: hidden; /* Oculta cualquier contenido desbordante */
 }
 
 #file-list li span {
     text-align: left; /* Justificar a la izquierda */
+
 }
 
 #file-list .file-header {
@@ -49,28 +57,22 @@ body {
     background-color: #f5f5f5;
 }
 
-#file-list .file-checkbox {
-    margin-right: 10px; /* Reducir el margen */
-}
-
-#file-list .file-header span {
-    margin-right: 5px; /* Eliminar margen adicional en el header */
-}
-
-#file-list .file-header input[type="checkbox"] {
-    margin-left: -10px; /* Mantener el checkbox alineado en el header */
-}
-
-input[type="checkbox"] {
-    margin: 0; /* Reducir el margen del checkbox */
-}
+ #file-list .file-header span {
+    margin-right: 10px; /* Eliminar margen adicional en el header +*/
+} 
 
 #file-list li:hover {
-    background-color: #f5f5f5;
+    background-color: #BDC3C7;
 }
 
+.selected {
+    background-color: #BDC3C7; /* Cambia el color según tus preferencias */
+    transform: scale(1.004); /* Aumenta el tamaño del texto */
+    transform-origin: center; /* Centra el zoom */
+    transition: transform 0.2s ease-in-out; /* Transición suave para el efecto de zoom */
+}
 
-/* New toolbar styles */
+/* New toolbar superior */
 .toolbar {
     display: flex;
     justify-content: space-between;
@@ -107,13 +109,12 @@ input[type="checkbox"] {
 }
 
 .fe-btn:hover {
-    background-color: #737373;
+    background-color:  #BDC3C7;
     color: #ffffff;
 }
+/*fin barra superior nuevo, subir... */
 
-/* New styles for modal, etc. */
-/* ... */
-
+/* modal de nuevo directorio*/
 .fe-modal {
     display: none;
     position: fixed;
@@ -123,7 +124,6 @@ input[type="checkbox"] {
     width: 100%;
     height: 100%;
     overflow: auto;
-    background-color: rgb(0,0,0);
     background-color: rgba(0,0,0,0.4);
     padding-top: 60px;
 }
@@ -162,6 +162,9 @@ input[type="checkbox"] {
     padding: 10px 20px;
     cursor: pointer;
 }
+/*fin modal nuevo directorio*/
+
+
 
 /* Additional styles for context menu */
 .additional-actions {
@@ -184,10 +187,26 @@ input[type="checkbox"] {
 }
 
 .additional-actions .fe-btn:hover {
-    background-color: #f0f0f0;
+    background-color: #BDC3C7;
+    color: black;
+}
+/*fin Additional styles for context menu */
+
+
+/* modal Styles for move */
+#fe-modal-move{
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0,0,0,0.4);
+    padding-top: 60px;
 }
 
-/* Styles for move modal */
 #move-file-list-container {
     margin: 10px 0;
     height: 200px;
@@ -236,7 +255,7 @@ input[type="checkbox"] {
     background-color: #f0f0f0;
     border-radius: 3px;
 }
-
+/*fin de estilo modal mover */
 
 
 /* Styles for copy modal */
@@ -333,13 +352,10 @@ input[type="checkbox"] {
     justify-content: flex-end;
     gap: 10px;
 }
-
-
+/*fin de modal de copiar y remplasar */
 
 
 /* Estilos para el modal de edición */
-
-
 .modal-edit {
     display: none;
     position: fixed;
@@ -388,3 +404,4 @@ input[type="checkbox"] {
     padding: 10px 20px;
     cursor: pointer;
 }
+/* fin Estilos para el modal de edición */
