--- a/styles/explore.css
+++ b/styles/explore.css
@@ -51,7 +51,12 @@ button{
 
 #file-list li span {
     text-align: left; /* Justificar a la izquierda */
+    display: flex;
+    align-items: center;
 
+}
+#file-list li span i {
+    padding-right: 10px; /* Espacio entre el icono y el nombre del archivo */
 }
 
 #file-list .file-header {
@@ -487,3 +492,14 @@ button{
     background-color:  #e74d3c ;
 }
 /* fin Estilos para el modal de edición */
+
+
+#file-list li i.bx {
+    margin-right: 0; /* Espacio entre el icono y el nombre del archivo */
+    font-size: 1.3em; /* Tamaño del icono */
+    align-items: stretch;
+    margin: 0;
+
+}
+
+
